--- a/index.html
+++ b/index.html
@@ -14,5 +14,11 @@
   </head>
   <body>
     <h1>My passion is coding</h1>
+    <footer>
+      This project was coded by Valen and is
+      <a href="https://github.com/meta100py/coding-project" target="_blank">
+        open sourced</a
+      >
+    </footer>
   </body>
 </html>
