--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   </head>
   <body>
     <h1>My passion is coding</h1>
+    <h2>I like all about it</h2>
     <footer>
       This project was coded by Valen and is
       <a href="https://github.com/meta100py/coding-project" target="_blank">
