--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     />
   </head>
   <body>
-    <h1>My passion is coding</h1>
-    <h2>I like all about it</h2>
+    <h1>My passion is the technology</h1>
+    <h2>I like all about it (including coding)</h2>
     <footer>
       This project was coded by Valen and is
       <a href="https://github.com/meta100py/coding-project" target="_blank">
