Added the header of the landing page

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My passion is coding</title>
+    <title>My passion is the technology</title>
     <link rel="stylesheet" href="src/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -13,13 +13,19 @@
     />
   </head>
   <body>
-    <h1>My passion is the technology</h1>
-    <h2>I like all about it (including coding)</h2>
-    <footer>
-      This project was coded by Valen and is
-      <a href="https://github.com/meta100py/coding-project" target="_blank">
-        open sourced</a
-      >
-    </footer>
+    <div class="container">
+      <header>
+        <h3>.TECHNOLOGY.</h3>
+        <h1>My passion is tech</h1>
+        <h2>I like all about it (including coding)</h2>
+        <a href="#more">Learn more</a>
+      </header>
+      <footer>
+        This project was coded by Valen and is
+        <a href="https://github.com/meta100py/coding-project" target="_blank">
+          open sourced</a
+        >
+      </footer>
+    </div>
   </body>
 </html>
