--- a/index.html
+++ b/index.html
@@ -20,12 +20,60 @@
         <h2>I like all about it (including coding)</h2>
         <a href="#more">Learn more</a>
       </header>
-      <footer>
-        This project was coded by Valen and is
-        <a href="https://github.com/meta100py/coding-project" target="_blank">
-          open sourced</a
-        >
-      </footer>
     </div>
+    <footer>
+      <section class="grid">
+        <div>
+          <h3>More about branches of technology</h3>
+          <ul>
+            <li>
+              <a
+                href="https://en.wikipedia.org/wiki/Computer_science"
+                target="_blank"
+              >
+                Computer Science</a
+              >
+            </li>
+            <li>
+              <a
+                href="https://en.wikipedia.org/wiki/Artificial_intelligence "
+                target="_blank"
+                >Artificial Intelligence</a
+              >
+            </li>
+            <li>
+              <a
+                href="https://en.wikipedia.org/wiki/Virtual_reality "
+                target="_blank"
+                >Virtual Reality</a
+              >
+            </li>
+          </ul>
+        </div>
+        <div>
+          <h3>About me</h3>
+          <p>
+            Hello! My name is Valentina, I'm from Paraguay. Since I was little,
+            I've been curious about everything around me, but I've always shown
+            greater interest in technology.
+          </p>
+        </div>
+        <div>
+          <h3>About this website</h3>
+          <p>
+            I wanted to create this site so people could learn a little more
+            about what I'm passionate about.
+            <br />
+            This project was coded by Valen and is
+            <a
+              href="https://github.com/meta100py/coding-project"
+              target="_blank"
+            >
+              open sourced</a
+            >
+          </p>
+        </div>
+      </section>
+    </footer>
   </body>
 </html>
