--- a/index.html
+++ b/index.html
@@ -43,6 +43,120 @@
             </p>
           </div>
         </section>
+        <section class="secondary">
+          <h2 class="text-center">BRANCHES</h2>
+          <h3 class="text-center">My favorite branches of technology</h3>
+          <div class="grid grid-3-columns">
+            <div class="card">
+              <div class="card-header">
+                <img
+                  src="images/branches/comp-sci.jpeg"
+                  alt=""
+                  class="img-responsive"
+                />
+              </div>
+              <div class="card-body">
+                <h4>Computer Science</h4>
+                <p>
+                  Computer science is the study of computation, information, and
+                  automation. Computer science spans theoretical disciplines
+                  (such as algorithms, theory of computation, and information
+                  theory) to applied disciplines (including the design and
+                  implementation of hardware and software).
+                </p>
+                <h5>Year of creation</h5>
+                <p>1940s</p>
+                <h5>What I like about it</h5>
+                <p>I like the branch of software development (coding)</p>
+                <div class="class-footer">
+                  <a
+                    href="https://en.wikipedia.org/wiki/Computer_science"
+                    class="btn"
+                    target="_blank"
+                    >Learn More</a
+                  >
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-header">
+                <img
+                  src="images/branches/art-intelligence.webp"
+                  alt=""
+                  class="img-responsive"
+                />
+              </div>
+              <div class="card-body">
+                <h4>Artificial Intelligence</h4>
+                <p>
+                  Artificial intelligence (AI) is the capability of
+                  computational systems to perform tasks typically associated
+                  with human intelligence, such as learning, reasoning,
+                  problem-solving, perception, and decision-making. It is a
+                  field of research in computer science that studies methods
+                  that enable machines to perceive their environment.
+                  <!-- It is a
+                  field of research in computer science that develops and
+                  studies methods and software that enable machines to perceive
+                  their environment and use learning and intelligence to take
+                  actions that maximize their chances of achieving defined
+                  goals. -->
+                </p>
+                <h5>Year of creation</h5>
+                <p>1943</p>
+                <h5>What I like about it</h5>
+                <p>
+                  I like AI because it can help us in many things, like
+                  summarize a text
+                </p>
+                <div class="class-footer">
+                  <a
+                    href="https://en.wikipedia.org/wiki/Artificial_intelligence "
+                    class="btn"
+                    target="_blank"
+                    >Learn More</a
+                  >
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-header">
+                <img
+                  src="images/branches/virtual-reality.jpg"
+                  alt=""
+                  class="img-responsive"
+                />
+              </div>
+              <div class="card-body">
+                <h4>Virtual Reality</h4>
+                <p>
+                  Virtual reality (VR) is a simulated experience that employs 3D
+                  near-eye displays and pose tracking to give the user an
+                  immersive feel of a virtual world. Applications of virtual
+                  reality include video games, education and business. VR is one
+                  of the key technologies in the reality-virtuality continuum.
+                  As such, it is different from other digital visualization
+                  solutions.
+                </p>
+                <h5>Year of creation</h5>
+                <p>1960</p>
+                <h5>What I like about it</h5>
+                <p>
+                  I like it because it feels like you're in several places at
+                  once.
+                </p>
+                <div class="class-footer">
+                  <a
+                    href="https://en.wikipedia.org/wiki/Virtual_reality"
+                    class="btn"
+                    target="_blank"
+                    >Learn More</a
+                  >
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
       </main>
       <footer>
         <section class="grid grid-3-columns-with-first-narrow">
