Activated learn more link

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             <img src="images/tech-4.png" alt="" class="img-responsive" />
           </div>
           <div>
+            <a name="more"></a>
             <h2>Why Technology?</h2>
             <h3>Technology is useful</h3>
             <p>
