--- a/index.html
+++ b/index.html
@@ -96,19 +96,13 @@
                   problem-solving, perception, and decision-making. It is a
                   field of research in computer science that studies methods
                   that enable machines to perceive their environment.
-                  <!-- It is a
-                  field of research in computer science that develops and
-                  studies methods and software that enable machines to perceive
-                  their environment and use learning and intelligence to take
-                  actions that maximize their chances of achieving defined
-                  goals. -->
                 </p>
                 <h5>Year of creation</h5>
                 <p>1943</p>
                 <h5>What I like about it</h5>
                 <p>
                   I like AI because it can help us in many things, like
-                  summarize a text
+                  summarize a text.
                 </p>
                 <div class="class-footer">
                   <a
@@ -1015,6 +1009,39 @@
               </blockquote>
               <script async src="//www.instagram.com/embed.js"></script>
             </div>
+          </div>
+        </section>
+        <section class="secondary">
+          <h2 class="text-center">MORE INFORMATION</h2>
+          <h3 class="text-center">Other branches of technology</h3>
+          <div class="table-container">
+            <table>
+              <thead>
+                <tr>
+                  <th><p>Branch</p></th>
+                  <th><p>Creation</p></th>
+                  <th><p>Creator</p></th>
+                  <th><p>Nationality</p></th>
+                  <th><p>Description</p></th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>Robotics</td>
+                  <td>1954</td>
+                  <td>George Devol</td>
+                  <td>American</td>
+                  <td>He created the first programmable industrial robot</td>
+                </tr>
+                <tr>
+                  <td>Quantum computing</td>
+                  <td>1982</td>
+                  <td>Richard Feynman</td>
+                  <td>American</td>
+                  <td>He introduced the idea of quantum computing</td>
+                </tr>
+              </tbody>
+            </table>
           </div>
         </section>
       </main>
